# math

./: AnalyzedCubic.cxx  AnalyzedCubic.h  CMakeLists.txt  CS.h  ConceptMathOperations.h  CubicPolynomial.cxx  CubicPolynomial.h  CubicPolynomial_get_roots.cpp  Direction.h  Hyperblock.h  Hyperplane.h  Line.cxx  Line.h  LinePiece.cxx  LinePiece.h  Makefile.am  Matrix.h  Point.h  Polynomial.h  QTransformAffineTransform.h  QuadraticPolynomial.h  README.md  Transform.h  TranslationVector.h  Universe.h  Vector.h  binomial.h  configure.m4  kFace.h  subsuper_string.cxx  subsuper_string.h
cmake/gitache-configs/: versor.cmake
cs/: CS.cxx  CS.h  Direction.h  Line.h  LinePiece.h  Matrix.h  Point.h  Size.h  TransformOperators.h  Vector.h
